@@ -1,3 +1,8 @@
+2004-02-17  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/rand.cxx (srand): Use correct thread data type.
+	(rand): Ditto.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/stdlib.cdl: Fix doc link.
